# Lab4Graf

./: CMakeLists.txt  README.md  framebuffer.cpp  framebuffer.h  main.cpp  objSettings.cpp  objSettings.h  run.sh  ship.mtl  ship3.mtl  ship5.mtl  uniform.cpp  uniform.h  vertexGML.cpp  vertexGML.h
